[package]
name = "rsa"
version = "0.1.0"
authors = ["irfanbozkurt"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = { version= "0.2.9", default-features = false, features = ["libm"] }
num-integer = { version = "0.1.39", default-features = false }
rand = "0.8.5"
